--- a/index.html
+++ b/index.html
@@ -22,50 +22,74 @@
 		<h1>IniciaGit</h1>
  		<h2>Hacer un commit es como pegar un tiro</h2>
 	</div>
-	
-
-
+	<!-- Nav movil -->
+<!-- 	<nav id="mobile">
+	 	<ul id='mobileMenu'>
+			<li><a href="#iniciando">Iniciando</a>
+			<li><a href="#comandos_basicos_de_terminal">Comandos básicos de terminal</a>
+				<ul>
+				    <li><a href="#ver_contenido_del_directorio">Ver contenido del directorio</a></li>
+				    <li><a href="#ubicarse_en_un_directorio">Ubicarse en un directorio</a></li>
+				    <li><a href="#crear_un_directorio">Crear un directorio</a></li>
+				</ul>
+			</li>
+			<li><a href="#empezar_con_github">Empezar con GitHub</a>
+				<ul>
+				    <li><a href="#crear_una_cuenta_en_github">Crear una cuenta en GitHub</a></li>
+				    <li><a href="#instalar_github">Instalar GitHub</a></li>
+				    <li><a href="#identificarse_como_usuario">Identificarse como usuario</a></li>
+				    <li><a href="#vincular_el_ordenador_con_GitHub_por_SSH">Vincular el ordenador con GitHub por SSH</a></li>
+				</ul>
+			</li>
+			<li><a href="#resumen_de_comandos">Resumen de comandos</a>
+			<li><a href="#mas_material">Más material</a>
+			<li><a href="#footer">Contáctame</a>
+		</ul>
+	</nav> -->
+	<!--/ Nav movil -->
+	<!-- Nav escritorio -->
 	<nav id="menu">
-	<!-- Primer post  -->
-	<ul>
-		<li><a href="#iniciando">Iniciando<span class="icon-rocket"></span></a></li>
-	</ul>
-	<!-- =============================================================================== -->
+		<!-- Primer post  -->
+		<ul>
+			<li><a href="#iniciando">Iniciando<span class="icon-rocket"></span></a></li>
+		</ul>
+		<!-- =============================================================================== -->
 
-	<!-- Capñitulo 1-->
-	<ul class='capitulo'>
-		<li><a href="#comandos_basicos_de_terminal">Comandos básicos de terminal<span class="icon-number"></span></a></li>
-	</ul>
-	<!-- Temas -->
-	<ul>
-		<li><a href="#ver_contenido_del_directorio">Ver contenido del directorio<span class="icon-uniE613"></span></a></li>
-		<li><a href="#ubicarse_en_un_directorio">Ubicarse en un directorio<span class="icon-uniE613"></span></a></li>
-		<li><a href="#crear_un_directorio">Crear un directorio<span class="icon-uniE613"></span></a></li>
-	</ul>
-	<!-- =============================================================================== -->
+		<!-- Capñitulo 1-->
+		<ul class='capitulo'>
+			<li><a href="#comandos_basicos_de_terminal">Comandos básicos de terminal<span class="icon-number"></span></a></li>
+		</ul>
+		<!-- Temas -->
+		<ul>
+			<li><a href="#ver_contenido_del_directorio">Ver contenido del directorio<span class="icon-uniE613"></span></a></li>
+			<li><a href="#ubicarse_en_un_directorio">Ubicarse en un directorio<span class="icon-uniE613"></span></a></li>
+			<li><a href="#crear_un_directorio">Crear un directorio<span class="icon-uniE613"></span></a></li>
+		</ul>
+		<!-- =============================================================================== -->
 
-	<!-- Capñitulo 2-->
-	<ul class='capitulo'>
-		<li><a href="#empezar_con_github">Empezar con GitHub<span class="icon-number2"></span></a></li>
-	</ul>
-	<!-- Temas -->
-	<ul>
-		<li><a href="#crear_una_cuenta_en_github">Crear una cuenta en GitHub<span class="icon-uniE613"></span></a></li>
-		<li><a href="#instalar_github">Instalar GitHub<span class="icon-uniE613"></span></a></li>
-		<li><a href="#identificarse_como_usuario">Identificarse como usuario<span class="icon-uniE613"></span></a></li>
-		<li><a href="#vincular_el_ordenador_con_GitHub_por_SSH">Vincular el ordenador con GitHub por SSH<span class="icon-uniE613"></span></a></li>
-	</ul>
-	<!-- =============================================================================== -->
+		<!-- Capñitulo 2-->
+		<ul class='capitulo'>
+			<li><a href="#empezar_con_github">Empezar con GitHub<span class="icon-number2"></span></a></li>
+		</ul>
+		<!-- Temas -->
+		<ul>
+			<li><a href="#crear_una_cuenta_en_github">Crear una cuenta en GitHub<span class="icon-uniE613"></span></a></li>
+			<li><a href="#instalar_github">Instalar GitHub<span class="icon-uniE613"></span></a></li>
+			<li><a href="#identificarse_como_usuario">Identificarse como usuario<span class="icon-uniE613"></span></a></li>
+			<li><a href="#vincular_el_ordenador_con_GitHub_por_SSH">Vincular el ordenador con GitHub por SSH<span class="icon-uniE613"></span></a></li>
+		</ul>
+		<!-- =============================================================================== -->
 
-	<!-- Más contenido y contacto-->
-	<br>
-	<ul>
-		<li><a href="#resumen_de_comandos">Resumen de comnados<span class="icon-code"></span></a></li>
-		<li><a href="#mas_material">Más material<span class="icon-books"></span></a></li>
-		<li><a href="#footer">Contáctame<span class="icon-bubble"></span></a></li>
-	</ul>
-	<br>
+		<!-- Más contenido y contacto-->
+		<br>
+		<ul>
+			<li><a href="#resumen_de_comandos">Resumen de comandos<span class="icon-code"></span></a></li>
+			<li><a href="#mas_material">Más material<span class="icon-books"></span></a></li>
+			<li><a href="#footer">Contáctame<span class="icon-bubble"></span></a></li>
+		</ul>
+		<br>
 	</nav>
+	<!--/ Nav escritorio -->
 </header>
 <!--/ Barra lateral con logo + menu -->
 <!-- =============================================================================== -->
