Cambio de colores y diseño de terminal

--- a/index.html
+++ b/index.html
@@ -120,17 +120,12 @@
 					<p>Puedes ver el contenido de una carpeta con el siguiente comando.</p>
 				</header>
 			    <!-- Terminal -->
-			    <figure>
+			    <figure id='terminal'>
 		        	<div class='terminal'>
 		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
 		          		<div id='maquina'>
-		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>ls</span> <br> Applications     Documents     Dropbox     Movies     Pictures     Desktop     Downloads    Library     Music     Public iMac-de-Jordi:~ jordiimac$</pre>
+		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>ls</span> <br> Applications  Documents  Dropbox  Movies  Pictures  Desktop  Downloads  Library  Music  Public <br>iMac-de-Jordi:~ jordiimac$</pre>
 		          		</div>
-			          	<div class="nota">
-				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
-				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
-				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p></div>
-		         		</div>
 			        </div>
 		      	</figure>
 		     	<!--/ Terminal -->
@@ -141,17 +136,12 @@
 					<p>Puedes entrar en una carpeta con el siguiente comando.</p>
 				</header>
 			    <!-- Terminal -->
-			    <figure>
+			    <figure id='terminal'>
 		        	<div class='terminal'>
 		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
 		          		<div id='maquina'>
 		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>cd documents</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
 		          		</div>
-			          	<div class="nota">
-				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
-				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
-				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
-			            </div>
 			          </div>
 			        </div>
 		      	</figure>
@@ -163,17 +153,17 @@
 					<p>Es importante poder crear directorios desde la terminal. Puedes hacerlo con este comando.</p>
 				</header>
 			    <!-- Terminal -->
-			    <figure>
+			    <figure id='terminal'>
 		        	<div class='terminal'>
 		          		<div class="barra"><pre id='barra'>Terminal</pre></div>
 		          		<div id='maquina'>
 		            		<pre>iMac-de-Jordi:~ jordiimac$ <span class='tipear'>mkdir miProyecto</span> <br>iMac-de-Jordi:documents jordiimac$</pre>
 		          		</div>
-			          	<div class="nota">
+			    <!--       	<div class="nota">
 				            <div class="color_maquina"><p><span>Texto</span> máquina.</p></div>
 				            <div class="color_tipear"><p><span>Texto</span> a tipear.</p></div>
 				            <div class="color_copiar"><p><span>Texto</span> a copiar.</p>
-			            </div>
+			            </div> -->
 			          </div>
 			        </div>
 		      	</figure>
@@ -181,7 +171,7 @@
 		     	<p>Esto creará un directorio llamado “Mi nuevo directorio” justo en la hubicación en la que te encuentres. </p>
 		     	<figure class='imagen'>
 		     		<div class="imagen">
-		     			<img src="http://placehold.it/600x300" alt="Documento creado">
+		     			<img src="img/imagen.jpeg" width='770' height='420' alt="Documento creado">
 		     		</div>
 		     	</figure>
 			</article>
@@ -197,7 +187,7 @@
 			<article id='article_resumen'>
 				<header id='grupo_comando'>
 					<div class="capitulo"><span class='icon-number'></span></div>
-					<h4>Comandos báscos de terminal</h4>					
+					<h4>Comandos báscos de terminal</h4>				
 				</header>
 				<section id='seccion_comando'>
 					<article>
@@ -262,7 +252,19 @@
 			<p>Hay mucho material en varios formatos que te ayudará a comprender mejor GitHub.</p>
 		</header>
 		<section id='tema'>
-			<article id=''>
+			<article id='libro'>
+				<header id="intra_libro">
+					<div class="capitulo"><span class='icon-book'></span></div>
+					<h4>Libros</h4>
+				</header>
+				<section>
+					<h5>Pro GIT</h5>
+					<article class="video">
+						<iframe width="560" height="315" src="//www.youtube.com/embed/udughzlN5M4" frameborder="0" allowfullscreen></iframe>
+						<!-- <img src="img/blur.jpg"  width='248' height='167' alt="blur"> -->
+					</article>
+					
+				</section>
 				
 			</article>
 		</section>
