Varias mejoras de estilo en resumen de comandos

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 		</header>
 		<section id='tema'>
 			<article id='article_resumen'>
-				<header id='grupo_comando'>
-					<div class="capitulo"><span class='icon-number'></span></div>
+				<header id='tema'>
+					<!-- <div class="capitulo"><span class='icon-number'></span></div> -->
 					<h4>Comandos báscos de terminal</h4>				
 				</header>
 				<section id='seccion_comando'>
@@ -209,8 +209,8 @@
 				</section>
 			</article>
 			<article id='article_resumen'>
-				<header id='grupo_comando'>
-					<div class="capitulo"><span class='icon-number2'></span></div>
+				<header id='tema'>
+					<!-- <div class="capitulo"><span class='icon-number2'></span></div> -->
 					<h4>Empezando con GitHub</h4>					
 				</header>
 				<section id='seccion_comando'>
@@ -222,16 +222,24 @@
 						<span id='comando'>Identificarse como usuario.</span>
 						<pre>git config user.name “nombre”</pre>
 						<pre>git config user.email “tu@email.com”</pre>
+					</article>
+					<article>
 						<span id='comando'>Comprobar que los datos se han registrado correctamente.</span>
 						<pre>git config list</pre>
 					</article>
 					<article>
 						<span id='comando'>Generar una llave SSH.</span>
 						<pre>$ssh-keygengit</pre>
+					</article>
+					<article>
 						<span id='comando'>Agrega una contraseña.</span>
-						<pre>Enter passphrase (empty for no passphrase): [Contraseña] <br> Enter same passphrase again: [Repetir contraseña]</pre>
+						<pre>Enter passphrase (empty for no passphrase): [Contraseña] <br>Enter same passphrase again: [Repetir contraseña]</pre>
+					</article>
+					<article>
 						<span id='comando'>Ver la llave SSH.</span>
 						<pre>$cd .ssh <br>$cat id_rsa.pub</pre>
+					</article>
+					<article>
 						<span id='comando'>Comprueba que tu ordenador está vinculado</span>
 						<pre>ssh -T git@github.com</pre>
 					</article>
