--- a/index.html
+++ b/index.html
@@ -80,11 +80,26 @@
 		</ul>
 		<!-- =============================================================================== -->
 
+		<ul id='comandos'>
+			<li><a href="#resumen_de_comandos">Resumen de comandos<span class="icon-code"></span></a></li>
+		</ul>
+
+
+		<!-- Más contendos-->
+		<ul class='capitulo'>
+			<li><a href="#mas_material">Más material<span class="icon-books"></span></a></li>
+		</ul>
+		<!-- Temas -->
+		<ul>
+			<li><a href="#material_texto">Textos<span class="icon-book"></span></a></li>
+			<li><a href="#material_video">Videos<span class="icon-uniF7C5"></span></a></li>
+			<li><a href="#material_ejercicio">Ejercicios<span class="icon-graduation"></span></a></li>
+		</ul>
+		<!-- =============================================================================== -->
+
 		<!-- Más contenido y contacto-->
 		<br>
 		<ul>
-			<li><a href="#resumen_de_comandos">Resumen de comandos<span class="icon-code"></span></a></li>
-			<li><a href="#mas_material">Más material<span class="icon-books"></span></a></li>
 			<li><a href="#footer">Contáctame<span class="icon-bubble"></span></a></li>
 		</ul>
 		<br>
@@ -186,8 +201,7 @@
 		<section id='tema'>
 			<article id='article_resumen'>
 				<header id='tema'>
-					<!-- <div class="capitulo"><span class='icon-number'></span></div> -->
-					<h4>Comandos báscos de terminal</h4>				
+					<h4>Comandos báscos de terminal</h4>			
 				</header>
 				<section id='seccion_comando'>
 					<article>
@@ -260,20 +274,58 @@
 			<p>Hay mucho material en varios formatos que te ayudará a comprender mejor GitHub.</p>
 		</header>
 		<section id='tema'>
-			<article id='libro'>
-				<header id="intra_libro">
-					<div class="capitulo"><span class='icon-book'></span></div>
-					<h4>Libros</h4>
+			<article id="material_texto">
+				<header id="tema">
+					<div class="capitulo"></div>
+					<h4>Textos</h4>
+					<p>Los libros y guías esenciales para  comprender GitHub y dar el extra.</p>
 				</header>
-				<section>
-					<h5>Pro GIT</h5>
-					<article class="video">
-						<iframe width="560" height="315" src="//www.youtube.com/embed/udughzlN5M4" frameborder="0" allowfullscreen></iframe>
-						<!-- <img src="img/blur.jpg"  width='248' height='167' alt="blur"> -->
-					</article>
+				<section id='seccion_comando'>
 					
 				</section>
-				
+			</article>
+			<article id="material_video">
+				<header id="tema">
+					<div class="capitulo"></div>
+					<h4>Videos</h4>
+					<p>Los videos que te darán la base para empezar a usar GitHub.</p>
+				</header>
+				<section>
+					<article>
+						<header>
+							<h5>Introducción a Git + GitHub | Miguel Nieva @mikenieva</h5>
+						</header>
+						<div id="video">
+							<iframe width="560" height="315" src="//www.youtube.com/embed/C_xFDRsEM7A?rel=0" frameborder="0" allowfullscreen></iframe>
+						</div>
+						<p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
+					</article>
+					<article>
+						<header>
+							<h5>Git: Branches | Christian Van Der Henst @cvander - Miguel Nieva @</h5>
+						</header>
+						<div id="video">
+							<iframe width="560" height="315" src="//www.youtube.com/embed/H5otM7wnvnM?rel=0" frameborder="0" allowfullscreen></iframe>
+						</div>
+						<p>Una clase especial dedicada a GitHub, Git y el comportamiento de los branches. Dirigida por Christian Van Der Henst y Miguel Nieva.</p>
+					</article>
+					<article>
+						<header>
+							<h5>Colaboración con GitHub | Miguel Nieva @mikenieva</h5>
+						</header>
+						<div id="video">
+							<iframe width="560" height="315" src="//www.youtube.com/embed/MfYw97qPiEQ?rel=0" frameborder="0" allowfullscreen></iframe>
+						</div>
+						<p>En esta ocasión, complementando a los materiales de GIT dentro de la plataforma, vemos la forma de colaborar en los proyectos estudiantiles.</p>
+					</article>
+				</section>
+			</article>
+			<article id="material_ejercicio">
+				<header id="tema">
+					<div class="capitulo"></div>
+					<h4>Ejercicios</h4>
+					<p>Los ejercicios que te permitirán practicar y asimilar el funcionamiento de GitHub.</p>
+				</header>
 			</article>
 		</section>
 	</article>
