Añadiendo libros y guías
Mejoras de estilo.

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 		</ul>
 		<!-- Temas -->
 		<ul>
-			<li><a href="#material_texto">Textos<span class="icon-book"></span></a></li>
-			<li><a href="#material_video">Videos<span class="icon-uniF7C5"></span></a></li>
-			<li><a href="#material_ejercicio">Ejercicios<span class="icon-graduation"></span></a></li>
+			<li><a href="#material_texto">Libros y guías<span class="icon-book"></span></a></li>
+			<li><a href="#material_video">Clases en vídeo<span class="icon-uniF7C5"></span></a></li>
+			<li><a href="#material_ejercicio">Ejercicios prácticos<span class="icon-graduation"></span></a></li>
 		</ul>
 		<!-- =============================================================================== -->
 
@@ -261,12 +261,12 @@
 			</article>
 		</section>
 		<footer id='footer_resumen'>
-			<div class="boton_descarga">
+			<div class="boton">
 				<a href="#"><span class='icon-in'>   PDF RESUMEN COMANDOS</span></a>
-				<!-- <div id="linea"></div> -->
 			</div>
 		</footer>
 	</article>
+
 	<article class='main' id="mas_material">
 		<header id="intra_article">
 			<div class="capitulo"><span class='icon-books'></span></div>
@@ -277,55 +277,30 @@
 			<article id="material_texto">
 				<header id="tema">
 					<div class="capitulo"></div>
-					<h4>Textos</h4>
+					<h4>Libros y guías</h4>
 					<p>Los libros y guías esenciales para  comprender GitHub y dar el extra.</p>
-				</header>
-				<section id='seccion_comando'>
-					
-				</section>
-			</article>
-			<article id="material_video">
-				<header id="tema">
-					<div class="capitulo"></div>
-					<h4>Videos</h4>
-					<p>Los videos que te darán la base para empezar a usar GitHub.</p>
 				</header>
 				<section>
 					<article>
-						<header>
-							<h5>Introducción a Git + GitHub | Miguel Nieva @mikenieva</h5>
-						</header>
-						<div id="video">
-							<iframe width="560" height="315" src="//www.youtube.com/embed/C_xFDRsEM7A?rel=0" frameborder="0" allowfullscreen></iframe>
+						<div id="contenido">
+							<div class="izq">
+								<div class="portada">
+									<img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git">
+								</div>
+							</div>
+							<div class="derecha">
+								<span id='comamdo'>LIBRO</span>
+								<h5><a href="http://git-scm.com/book/es" target='blanck'>Pro git</a></h5>
+								<div class="bandera">
+									<img src="img/esp.jpg" width='59' height='39' alt="idioma español">
+								</div>
+								<span>El libro Git Pro entero, escrito por Scott Chacon y publicado por Apress, está disponible aquí. Todo el contenido está licenciado bajo la licencia Creative Commons Reconocimiento No comercial Compartir bajo la misma licencia 3.0.</span>
+							</div>
 						</div>
-						<p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
 					</article>
-					<article>
-						<header>
-							<h5>Git: Branches | Christian Van Der Henst @cvander - Miguel Nieva @</h5>
-						</header>
-						<div id="video">
-							<iframe width="560" height="315" src="//www.youtube.com/embed/H5otM7wnvnM?rel=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-						<p>Una clase especial dedicada a GitHub, Git y el comportamiento de los branches. Dirigida por Christian Van Der Henst y Miguel Nieva.</p>
-					</article>
-					<article>
-						<header>
-							<h5>Colaboración con GitHub | Miguel Nieva @mikenieva</h5>
-						</header>
-						<div id="video">
-							<iframe width="560" height="315" src="//www.youtube.com/embed/MfYw97qPiEQ?rel=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-						<p>En esta ocasión, complementando a los materiales de GIT dentro de la plataforma, vemos la forma de colaborar en los proyectos estudiantiles.</p>
-					</article>
+
+
 				</section>
-			</article>
-			<article id="material_ejercicio">
-				<header id="tema">
-					<div class="capitulo"></div>
-					<h4>Ejercicios</h4>
-					<p>Los ejercicios que te permitirán practicar y asimilar el funcionamiento de GitHub.</p>
-				</header>
 			</article>
 		</section>
 	</article>
