Estilado header y nav movile first

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link href='http://fonts.googleapis.com/css?family=Lato:100|Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/estilos.css">
+
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -28,7 +30,7 @@
     <h2>Hacer un commit es como pegar un tiro</h2>
 </header>
 <nav>
-    <ul>
+    <ul id='mobileMenu'>
         <Li><a href="#">Iniciando</a></Li>
         <Li><a class='capitulo' href="#">Empezando con Github</a></Li>
         <li><a href="#">Crear una cuenta de Github</a></li>
@@ -70,8 +72,8 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<script src="js/plugins-ck.js"></script>
+<script src="js/main-ck.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
